--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# vscode Configuration #
+##########################
+*/.vscode
+
 # Obsidian Configuration #
 ##########################
 */.obsidian
